--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,8 +97,11 @@
                         android:id="@+id/imageView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:rotation="-306"
+                        android:rotationX="-360"
+                        android:rotationY="8"
                         android:scaleType="fitXY"
-                        android:src="@drawable/banner"
+                        android:src="@drawable/lanche1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
